--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
-author: mstiles92
+author: [mstiles92, The_BrainStone]
 description: Manages players after death.
 name: HardcoreDeathBan
 main: com.mstiles92.plugins.hardcoredeathban.HardcoreDeathBan
-version: '1.2.1-SNAPSHOT'
+version: '2.0.0'
 startup: postworld
 permissions:
   deathban.*:
