Making it work for Offline Players
- Plugin now working with offline Players
- Formatting and cleanup

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
-author: [mstiles92, The_BrainStone]
+authors: [mstiles92, The_BrainStone]
 description: Manages players after death.
 name: HardcoreDeathBan
 main: com.mstiles92.plugins.hardcoredeathban.HardcoreDeathBan
-version: '2.0.0'
+version: '2.0.2'
 startup: postworld
 permissions:
   deathban.*:
